--- a/Promises.html
+++ b/Promises.html
@@ -18,7 +18,23 @@
         {name: 'Addy Osmani', twitter: '@addyosmani', bio: 'Googler'},
     ];
 
-    console.log("we are about about to learn promises once and for all");
+    function getPostById(id) {
+        return new Promise((resolve, reject) => {
+            setTimeout(() => {
+                const post = posts.find(post => post.id === id);
+
+                if (post) {
+                    resolve(post);
+                } else {
+                    reject(Error(`Post of id ${id} not found`));
+                }
+            }, 3 * 1000);
+        })
+    }
+
+    getPostById(1)
+        .then(post => console.log(post));
+
 
 </script>
 </body>
